--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
 - pip install --user conan
 - conan user
 - conan profile new default
-- conan profile update default settings.compiler.libcxx=libc++
+- conan profile update settings.compiler.libcxx=libc++ default
 script:
 - CXXFLAGS="-stdlib=libc++" cmake .
 - cmake --build .
