--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
 - conan profile new default
 - conan profile update settings.compiler.libcxx=libc++ default
 script:
-- CXXFLAGS="-stdlib=libc++" cmake .
+- CXXFLAGS="-stdlib=libc++" cmake -DCMAKE_BUILD_TYPE=Release .
 - cmake --build .
 - cmake --build . --target test
 - cmake --build . --target package
