--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ addons:
 install:
 - pip install --user conan
 - conan user
-- conan profile new default
-- conan profile update settings.compiler.libcxx=libc++ default
+- conan profile new --detect default
 script:
+- conan profile update settings.compiler.libcxx=libc++ default
 - CXXFLAGS="-stdlib=libc++" cmake -DCMAKE_BUILD_TYPE=Release .
 - cmake --build .
 - cmake --build . --target test
