--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,20 +1,28 @@
 project(${PROJECT_NAME}_tests)
 
 list(APPEND ${PROJECT_NAME}_SOURCES
-    ${CMAKE_SOURCE_DIR}/src/ip_filter.cpp
-    test_ip_filter.cpp
+    test_ip_address.cpp
     main.cpp)
 
 add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_SOURCES})
 
-target_link_libraries(${PROJECT_NAME} CONAN_PKG::Catch2)
+target_link_libraries(${PROJECT_NAME} CONAN_PKG::Catch2 CONAN_PKG::range-v3)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
     CXX_STANDARD 17
     CXX_STANDARD_REQUIRED ON
-    COMPILE_OPTIONS "-Wpedantic;-Wall;-Wextra"
     INCLUDE_DIRECTORIES ${CMAKE_SOURCE_DIR}/src
 )
+
+if (NOT WIN32)
+    set_target_properties(${PROJECT_NAME} PROPERTIES
+        COMPILE_OPTIONS "-Wall;-Wextra"
+    )
+else()
+    set_target_properties(${PROJECT_NAME} PROPERTIES
+        COMPILE_OPTIONS "-Wpedantic;-Wall;-Wextra"
+    )
+endif()
 
 enable_testing()
 
